Bug 964267 - fix star button pressed state on Australis, r=mikedeboer
UltraBlame original commit: 690e76bd7d909d02dac059db73d8d0bfd3049c65

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -1,61 +1,3 @@
-/
-*
-This
-Source
-Code
-Form
-is
-subject
-to
-the
-terms
-of
-the
-Mozilla
-Public
-*
-License
-v
-.
-2
-.
-0
-.
-If
-a
-copy
-of
-the
-MPL
-was
-not
-distributed
-with
-this
-*
-file
-You
-can
-obtain
-one
-at
-http
-:
-/
-/
-mozilla
-.
-org
-/
-MPL
-/
-2
-.
-0
-/
-.
-*
-/
 import
 url
 (
@@ -257,14 +199,6 @@ group
 :
 101
 ;
-/
-*
-tabs
-toolbar
-is
-100
-*
-/
 background
 -
 image
@@ -355,14 +289,6 @@ index
 :
 2
 ;
-/
-*
-navbar
-is
-at
-1
-*
-/
 }
 #
 navigator
@@ -421,51 +347,6 @@ display
 none
 ;
 }
-/
-*
-NB
-:
-these
-would
-be
--
-moz
--
-margin
--
-start
-/
-end
-if
-it
-wasn
-'
-t
-for
-the
-fact
-that
-OS
-X
-*
-doesn
-'
-t
-reverse
-the
-order
-of
-the
-items
-in
-the
-titlebar
-in
-RTL
-mode
-.
-*
-/
 .
 titlebar
 -
@@ -648,40 +529,6 @@ rgba
 )
 ;
 }
-/
-*
-Because
-of
--
-moz
--
-box
--
-align
-:
-center
-above
-separators
-will
-be
-invisible
-unless
-we
-set
-their
-min
--
-height
-.
-See
-bug
-583510
-for
-more
-information
-.
-*
-/
 toolbarseparator
 {
 min
@@ -830,55 +677,6 @@ box
 !
 important
 ;
-/
-*
-Move
-the
-noise
-texture
-out
-of
-the
-top
-1px
-strip
-because
-that
-overlaps
-with
-the
-tabbar
-and
-we
-don
-'
-t
-want
-to
-repaint
-it
-when
-animating
-tabs
-.
-The
-noise
-image
-is
-at
-least
-100px
-high
-so
-repeating
-it
-only
-horizontally
-is
-enough
-.
-*
-/
 background
 -
 repeat
@@ -925,19 +723,6 @@ top
 -
 1px
 ;
-/
-*
-Position
-the
-toolbar
-above
-the
-bottom
-of
-background
-tabs
-*
-/
 position
 :
 relative
@@ -1098,22 +883,6 @@ chrome
 inactive
 ;
 }
-/
-*
--
--
--
--
--
-BOOKMARK
-TOOLBAR
--
--
--
--
--
-*
-/
 #
 personal
 -
@@ -1125,18 +894,6 @@ height
 :
 17px
 ;
-/
-*
-16px
-button
-height
-+
-1px
-margin
--
-bottom
-*
-/
 }
 toolbarbutton
 .
@@ -1275,22 +1032,6 @@ width
 ;
 }
 }
-/
-*
--
--
--
--
--
-BOOKMARK
-BUTTONS
--
--
--
--
--
-*
-/
 toolbarbutton
 .
 bookmark
@@ -1564,18 +1305,6 @@ box
 !
 important
 ;
-/
-*
-Force
-the
-display
-of
-the
-label
-for
-bookmarks
-*
-/
 margin
 :
 0
@@ -2678,15 +2407,6 @@ png
 ;
 }
 }
-/
-*
-Workaround
-for
-native
-menubar
-inheritance
-*
-/
 .
 openintabs
 -
@@ -3111,23 +2831,6 @@ width
 ;
 }
 }
-/
-*
--
--
--
--
--
-BOOKMARK
-STAR
-ANIMATION
--
--
--
--
--
-*
-/
 keyframes
 animation
 -
@@ -3655,22 +3358,6 @@ ease
 out
 ;
 }
-/
-*
--
--
--
--
--
-BOOKMARK
-MENUS
--
--
--
--
--
-*
-/
 .
 bookmark
 -
@@ -3835,23 +3522,6 @@ png
 ;
 }
 }
-/
-*
--
--
--
--
--
-PRIMARY
-TOOLBAR
-BUTTONS
--
--
--
--
--
-*
-/
 toolbar
 .
 toolbarbutton
@@ -3981,33 +3651,6 @@ margin
 4px
 ;
 }
-/
-*
-*
-*
-Draw
-seperators
-before
-toolbar
-button
-dropmarkers
-as
-well
-as
-between
-*
-consecutive
-toolbarbutton
--
-1
-'
-s
-within
-a
-toolbaritem
-.
-*
-/
 #
 nav
 -
@@ -4368,6 +4011,9 @@ bookmarks
 menu
 -
 button
+[
+buttonover
+]
 toolbarButtonPressed
 {
 -
@@ -4393,33 +4039,10 @@ menu
 -
 button
 [
-open
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-36px
-144px
-54px
-126px
-)
-;
-}
-#
-bookmarks
--
-menu
--
-button
-[
 starred
+]
+[
+buttonover
 ]
 toolbarButtonPressed
 {
@@ -5335,27 +4958,6 @@ rect
 )
 ;
 }
-/
-*
-*
-*
-OSX
-has
-a
-unique
-set
-of
-icons
-when
-fullscreen
-is
-in
-the
-checked
-state
-.
-*
-/
 #
 fullscreen
 -
@@ -5438,31 +5040,6 @@ resolution
 2dppx
 )
 {
-/
-*
-Whitelist
-built
--
-in
-buttons
-instead
-of
-.
-toolbarbutton
--
-1
-to
-avoid
-potentially
-breaking
-add
--
-on
-toolbar
-buttons
-.
-*
-/
 :
 -
 moz
@@ -5826,6 +5403,9 @@ areatype
 toolbar
 "
 ]
+[
+buttonover
+]
 :
 hover
 :
@@ -5854,41 +5434,6 @@ rect
 36px
 288px
 72px
-252px
-)
-;
-}
-#
-bookmarks
--
-menu
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-[
-open
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-72px
-288px
-108px
 252px
 )
 ;
@@ -5945,6 +5490,9 @@ toolbar
 ]
 [
 starred
+]
+[
+buttonover
 ]
 :
 hover
@@ -8468,15 +8016,6 @@ width
 18px
 ;
 }
-/
-*
-Menu
-panel
-and
-palette
-styles
-*
-/
 :
 -
 moz
@@ -9668,16 +9207,6 @@ rect
 )
 ;
 }
-/
-*
-Footer
-and
-wide
-panel
-control
-icons
-*
-/
 #
 edit
 -
@@ -9748,41 +9277,6 @@ png
 )
 ;
 }
-/
-*
-Wide
-items
-like
-the
-Cut
-/
-Copy
-/
-Paste
-and
-Zoom
-controls
-are
-special
-in
-that
-their
-icons
-are
-16x16
-when
-in
-the
-panel
-but
-18x18
-when
-in
-a
-toolbar
-.
-*
-/
 #
 edit
 -
@@ -10162,15 +9656,6 @@ width
 28px
 ;
 }
-/
-*
-Help
-16px
-icons
-fit
-:
-*
-/
 .
 toolbarbutton
 -
@@ -10232,15 +9717,6 @@ margin
 2px
 ;
 }
-/
-*
-Help
-SDK
-icons
-fit
-:
-*
-/
 toolbarbutton
 [
 sdk
@@ -11271,16 +10747,6 @@ top
 1px
 ;
 }
-/
-*
-Common
-back
-and
-forward
-button
-styles
-*
-/
 #
 back
 -
@@ -11573,13 +11039,6 @@ scaleX
 )
 ;
 }
-/
-*
-Back
-button
-styles
-*
-/
 #
 back
 -
@@ -11825,13 +11284,6 @@ position
 0
 ;
 }
-/
-*
-Forward
-button
-styles
-*
-/
 #
 forward
 -
@@ -11895,18 +11347,6 @@ toolbarbutton
 -
 icon
 {
-/
-*
-shift
-the
-icon
-away
-from
-the
-back
-button
-*
-/
 margin
 -
 left
@@ -12786,12 +12226,6 @@ png
 important
 ;
 }
-/
-*
-home
-button
-*
-/
 #
 home
 -
@@ -12910,13 +12344,6 @@ end
 3px
 ;
 }
-/
-*
-tabview
-menu
-item
-*
-/
 #
 menu_tabview
 {
@@ -13230,12 +12657,6 @@ left
 0
 ;
 }
-/
-*
-zoom
-controls
-*
-/
 #
 zoom
 -
@@ -13468,12 +12889,6 @@ margin
 2px
 ;
 }
-/
-*
-sync
-button
-*
-/
 #
 sync
 -
@@ -13527,23 +12942,6 @@ rect
 )
 ;
 }
-/
-*
--
--
--
--
--
-FULLSCREEN
-WINDOW
-CONTROLS
--
--
--
--
--
-*
-/
 #
 minimize
 -
@@ -13572,25 +12970,6 @@ display
 none
 ;
 }
-/
-*
-:
-:
-:
-:
-:
-nav
--
-bar
--
-inner
-:
-:
-:
-:
-:
-*
-/
 #
 urlbar
 .
@@ -14183,27 +13562,6 @@ wrapper
 #
 urlbar
 {
-/
-*
-delay
-the
-hiding
-of
-the
-forward
-button
-when
-hovered
-to
-avoid
-accidental
-clicks
-on
-the
-url
-bar
-*
-/
 transition
 -
 delay
@@ -14245,29 +13603,6 @@ wrapper
 #
 urlbar
 {
-/
-*
-when
-switching
-tabs
-or
-when
-not
-hovered
-anymore
-trigger
-a
-new
-transition
-*
-to
-hide
-the
-forward
-button
-immediately
-*
-/
 margin
 -
 left
@@ -14314,31 +13649,6 @@ dir
 rtl
 )
 {
-/
-*
-let
-osx
--
-urlbar
--
-back
--
-button
--
-clip
--
-path
-clip
-the
-urlbar
-'
-s
-right
-side
-for
-RTL
-*
-/
 transform
 :
 scaleX
@@ -14670,27 +13980,6 @@ identity
 -
 box
 {
-/
-*
-delay
-the
-hiding
-of
-the
-forward
-button
-when
-hovered
-to
-avoid
-accidental
-clicks
-on
-the
-url
-bar
-*
-/
 transition
 -
 delay
@@ -15504,28 +14793,6 @@ rect
 )
 ;
 }
-/
-*
-The
-chromeUI
-identity
--
-icon
-set
-includes
-three
-states
-but
-OS
-X
-only
-uses
-two
-of
-them
-.
-*
-/
 #
 identity
 -
@@ -15962,28 +15229,6 @@ rect
 )
 ;
 }
-/
-*
-The
-chromeUI
-identity
--
-icon
-set
-includes
-three
-states
-but
-OS
-X
-only
-uses
-two
-of
-them
-.
-*
-/
 #
 identity
 -
@@ -16119,21 +15364,6 @@ top
 2px
 ;
 }
-/
-*
--
--
--
--
--
-AUTOCOMPLETE
--
--
--
--
--
-*
-/
 #
 treecolAutoCompleteImage
 {
@@ -17049,30 +16279,6 @@ solid
 GrayText
 ;
 }
-/
-*
--
--
--
--
--
-COMBINED
-GO
-/
-RELOAD
-/
-STOP
-BUTTON
-IN
-LOCATION
-BAR
--
--
--
--
--
-*
-/
 #
 urlbar
 >
@@ -17767,13 +16973,6 @@ width
 ;
 }
 }
-/
-*
-POPUP
-BLOCKER
-BUTTON
-*
-/
 #
 page
 -
@@ -17969,13 +17168,6 @@ rect
 ;
 }
 }
-/
-*
-social
-share
-panel
-*
-/
 .
 social
 -
@@ -18026,19 +17218,6 @@ height
 :
 150px
 ;
-/
-*
-we
-resize
-our
-panels
-dynamically
-make
-it
-look
-nice
-*
-/
 transition
 :
 height
@@ -18318,13 +17497,6 @@ height
 16px
 ;
 }
-/
-*
-social
-recommending
-panel
-*
-/
 #
 social
 -
@@ -18348,14 +17520,6 @@ rect
 )
 ;
 }
-/
-*
-bookmarks
-menu
--
-button
-*
-/
 #
 bookmarks
 -
@@ -18612,12 +17776,6 @@ width
 ;
 }
 }
-/
-*
-BOOKMARKING
-PANEL
-*
-/
 #
 editBookmarkPanelStarIcon
 {
@@ -18734,18 +17892,6 @@ bottom
 0
 ;
 }
-/
-*
-*
-*
-*
-Input
-elements
-*
-*
-*
-*
-/
 #
 editBMPanel_rows
 >
@@ -18896,19 +18042,6 @@ shadow
 focusRingShadow
 ;
 }
-/
-*
-*
-*
-*
-HUD
-style
-buttons
-*
-*
-*
-*
-/
 .
 editBookmarkPanelHeaderButton
 .
@@ -19009,52 +18142,6 @@ start
 8px
 ;
 }
-/
-*
-The
-following
-elements
-come
-from
-editBookmarkOverlay
-.
-xul
-.
-Styling
-that
-'
-s
-specific
-to
-the
-editBookmarkPanel
-should
-be
-in
-browser
-.
-css
-.
-Styling
-that
-should
-be
-shared
-by
-all
-editBookmarkOverlay
-.
-xul
-consumers
-should
-be
-in
-editBookmarkOverlay
-.
-css
-.
-*
-/
 #
 editBMPanel_newFolderBox
 {
@@ -19502,21 +18589,6 @@ png
 )
 ;
 }
-/
-*
-*
-*
-*
-folder
-tree
-and
-tag
-selector
-*
-*
-*
-*
-/
 #
 editBMPanel_folderTree
 #
@@ -19663,19 +18735,6 @@ radius
 :
 0
 ;
-/
-*
-Implements
-editBookmarkPanel
-resizing
-on
-folderTree
-un
--
-collapse
-.
-*
-/
 margin
 :
 0
@@ -19693,17 +18752,6 @@ position
 relative
 ;
 }
-/
-*
-*
-*
-*
-expanders
-*
-*
-*
-*
-/
 #
 editBookmarkPanel
 .
@@ -20332,13 +19380,6 @@ width
 ;
 }
 }
-/
-*
-History
-Swipe
-Animation
-*
-/
 #
 historySwipeAnimationCurrentPage
 #
@@ -20389,22 +19430,6 @@ png
 B3B9C1
 ;
 }
-/
-*
--
--
--
--
--
-SIDEBAR
-ELEMENTS
--
--
--
--
--
-*
-/
 #
 sidebar
 sidebarheader
@@ -20677,21 +19702,6 @@ display
 none
 ;
 }
-/
-*
--
--
--
--
--
-CONTENT
--
--
--
--
--
-*
-/
 .
 browserContainer
 >
@@ -20835,21 +19845,6 @@ image
 none
 ;
 }
-/
-*
-:
-:
-:
-:
-:
-tabbrowser
-:
-:
-:
-:
-:
-*
-/
 .
 tabbrowser
 -
@@ -20905,21 +19900,6 @@ resolution
 2dppx
 )
 {
-/
-*
-image
-preloading
-hack
-from
-shared
-/
-tabs
-.
-inc
-.
-css
-*
-/
 #
 TabsToolbar
 :
@@ -21558,13 +20538,6 @@ png
 )
 ;
 }
-/
-*
-Background
-tab
-separators
-*
-/
 #
 tabbrowser
 -
@@ -21828,14 +20801,6 @@ moz
 lwtheme
 )
 {
-/
-*
-overriding
-tabbox
-.
-css
-*
-/
 color
 :
 inherit
@@ -21851,14 +20816,6 @@ selected
 true
 ]
 {
-/
-*
-overriding
-tabbox
-.
-css
-*
-/
 text
 -
 shadow
@@ -22088,69 +21045,6 @@ lwtheme
 :
 before
 {
-/
-*
-We
-want
-the
-titlebar
-to
-be
-unified
-but
-we
-still
-want
-to
-be
-able
-*
-to
-give
-#
-TabsToolbar
-a
-background
-.
-So
-we
-can
-'
-t
-set
--
-moz
--
-appearance
-:
-*
-toolbar
-on
-#
-TabsToolbar
-itself
-.
-Instead
-we
-set
-it
-on
-a
-box
-of
-the
-*
-right
-size
-which
-is
-put
-underneath
-#
-TabsToolbar
-.
-*
-/
 content
 :
 '
@@ -22236,28 +21130,6 @@ shadow
 loweredShadow
 ;
 }
-/
-*
-*
-Draw
-the
-bottom
-border
-of
-the
-tabstrip
-when
-core
-doesn
-'
-t
-do
-it
-for
-us
-:
-*
-/
 #
 main
 -
@@ -22323,73 +21195,6 @@ content
 '
 '
 ;
-/
-*
-Because
-we
-use
-placeholders
-for
-window
-controls
-etc
-.
-in
-the
-tabstrip
-*
-and
-position
-those
-with
-ordinal
-attributes
-and
-because
-our
-layout
-code
-*
-expects
-:
-before
-/
-:
-after
-nodes
-to
-come
-first
-/
-last
-in
-the
-frame
-list
-*
-we
-have
-to
-reorder
-this
-element
-to
-come
-last
-hence
-the
-*
-ordinal
-group
-value
-(
-see
-bug
-853415
-)
-.
-*
-/
 -
 moz
 -
@@ -22475,16 +21280,6 @@ padding
 4px
 ;
 }
-/
-*
-*
-*
-Tab
-Drag
-and
-Drop
-*
-/
 .
 tab
 -
@@ -22575,17 +21370,6 @@ width
 ;
 }
 }
-/
-*
-*
-*
-In
--
-tab
-close
-button
-*
-/
 .
 tab
 -
@@ -23968,20 +22752,6 @@ png
 fill
 ;
 }
-/
-*
-*
-*
-Tabstrip
-&
-add
--
-on
-bar
-toolbar
-buttons
-*
-/
 #
 TabsToolbar
 .
@@ -24022,19 +22792,6 @@ appearance
 :
 none
 ;
-/
-*
-!
-important
-flags
-needed
-because
-of
-bug
-561154
-:
-*
-/
 margin
 :
 0
@@ -25382,13 +24139,6 @@ end
 2px
 ;
 }
-/
-*
-All
-Tabs
-Menupopup
-*
-/
 .
 alltabs
 -
@@ -25548,23 +24298,6 @@ item
 tabIsVisible
 ]
 {
-/
-*
-box
--
-shadow
-instead
-of
-background
--
-color
-to
-work
-around
-native
-styling
-*
-/
 box
 -
 shadow
@@ -25576,13 +24309,6 @@ inset
 ThreeDShadow
 ;
 }
-/
-*
-Tabstrip
-close
-button
-*
-/
 .
 tabs
 -
@@ -25627,12 +24353,6 @@ width
 ;
 }
 }
-/
-*
-Bookmarks
-toolbar
-*
-/
 #
 PlacesToolbarDropIndicator
 {
@@ -25660,15 +24380,6 @@ png
 )
 ;
 }
-/
-*
-Bookmark
-drag
-and
-drop
-styles
-*
-/
 .
 bookmark
 -
@@ -25696,15 +24407,6 @@ HighlightText
 important
 ;
 }
-/
-*
-rules
-for
-menupopup
-drop
-indicators
-*
-/
 .
 menupopup
 -
@@ -25718,21 +24420,6 @@ position
 :
 relative
 ;
-/
-*
-these
-two
-margins
-must
-together
-compensate
-the
-indicator
-'
-s
-height
-*
-/
 margin
 -
 top
@@ -25784,12 +24471,6 @@ color
 Highlight
 ;
 }
-/
-*
-Popup
-Icons
-*
-/
 #
 identity
 -
@@ -26098,13 +24779,6 @@ png
 ;
 }
 }
-/
-*
-Popup
-Body
-Text
-*
-/
 .
 identity
 -
@@ -27177,15 +25851,6 @@ png
 )
 ;
 }
-/
-*
-XXX
-:
-need
-HiDPI
-version
-*
-/
 .
 geo
 -
@@ -27287,18 +25952,6 @@ start
 :
 0
 ;
-/
-*
-override
-default
-label
-margin
-to
-match
-description
-margin
-*
-/
 }
 .
 indexedDB
@@ -28076,26 +26729,6 @@ box
 hidden
 ]
 {
-/
-*
-Override
-display
-:
-none
-to
-make
-the
-pluginBlockedNotification
-animation
-work
-when
-showing
-the
-notification
-repeatedly
-.
-*
-/
 display
 :
 -
@@ -29827,12 +28460,6 @@ png
 ;
 }
 }
-/
-*
-Popup
-Buttons
-*
-/
 #
 identity
 -
@@ -29890,23 +28517,6 @@ active
 {
 hudButtonPressed
 }
-/
-*
-:
-:
-:
-:
-:
-Keyboard
-UI
-Panel
-:
-:
-:
-:
-:
-*
-/
 .
 KUI
 -
@@ -29999,13 +28609,6 @@ shadow
 none
 ;
 }
-/
-*
-Ctrl
--
-Tab
-*
-/
 #
 ctrlTab
 -
@@ -30300,12 +28903,6 @@ top
 5em
 ;
 }
-/
-*
-Sync
-Panels
-*
-/
 .
 sync
 -
@@ -30528,12 +29125,6 @@ margin
 0
 ;
 }
-/
-*
-Status
-panel
-*
-/
 .
 statuspanel
 -
@@ -30717,14 +29308,6 @@ left
 1em
 ;
 }
-/
-*
-Lion
-Fullscreen
-window
-styling
-*
-/
 media
 (
 -
@@ -30794,26 +29377,6 @@ moz
 -
 lwtheme
 {
-/
-*
-This
-additional
-padding
-matches
-the
-change
-in
-height
-in
-the
-pseudo
--
-element
-*
-above
-.
-*
-/
 padding
 -
 top
@@ -30843,44 +29406,6 @@ moz
 -
 lwtheme
 {
-/
-*
-In
-combination
-with
-the
-previous
-rule
-forces
-the
-top
-22px
-of
-the
-*
-background
-image
-to
-be
-hidden
-so
-the
-image
-doesn
-'
-t
-jump
-around
-with
-*
-the
-loss
-of
-the
-titlebar
-.
-*
-/
 background
 -
 position
@@ -31103,32 +29628,6 @@ downloads
 indicator
 .
 css
-/
-*
-On
-mac
-the
-popup
-notification
-contents
-are
-indented
-by
-default
-and
-so
-the
-default
-closebutton
-margins
-from
-notification
-.
-css
-require
-adjustment
-*
-/
 .
 click
 -
@@ -31209,12 +29708,6 @@ hsl
 )
 ;
 }
-/
-*
-Developer
-Toolbar
-*
-/
 #
 developer
 -
@@ -31235,12 +29728,6 @@ right
 8px
 ;
 }
-/
-*
-Error
-counter
-*
-/
 #
 developer
 -
@@ -31295,19 +29782,6 @@ radius
 1px
 ;
 }
-/
-*
-=
-=
-=
-social
-toolbar
-button
-=
-=
-=
-*
-/
 #
 social
 -
@@ -31856,22 +30330,6 @@ badge
 ]
 )
 {
-/
-*
-The
-|
-content
-|
-property
-is
-set
-in
-the
-content
-stylesheet
-.
-*
-/
 font
 -
 size
@@ -32322,18 +30780,6 @@ start
 :
 0
 ;
-/
-*
-override
-default
-label
-margin
-to
-match
-description
-margin
-*
-/
 }
 .
 social
@@ -32430,35 +30876,6 @@ active
 {
 hudButtonPressed
 }
-/
-*
-=
-=
-=
-end
-of
-social
-toolbar
-button
-=
-=
-=
-*
-/
-/
-*
-=
-=
-=
-social
-toolbar
-provider
-menu
-=
-=
-=
-*
-/
 .
 social
 -
@@ -32545,16 +30962,6 @@ padding
 0
 ;
 }
-/
-*
-fixup
-rounded
-corners
-for
-osx
-panels
-*
-/
 .
 social
 -
@@ -32898,22 +31305,6 @@ radius
 inherit
 ;
 }
-/
-*
-=
-=
-=
-end
-of
-social
-toolbar
-provider
-menu
-=
-=
-=
-*
-/
 %
 include
 .
@@ -33208,12 +31599,6 @@ radius
 toolbarbuttonCornerRadius
 ;
 }
-/
-*
-Customization
-mode
-*
-/
 %
 include
 .
@@ -33949,13 +32334,6 @@ right
 2em
 ;
 }
-/
-*
-End
-customization
-mode
-*
-/
 #
 main
 -
@@ -34088,39 +32466,6 @@ right
 20px
 ;
 }
-/
-*
-Note
-that
-the
-caption
-and
-fullscreen
-buttons
-stay
-in
-the
-same
-position
-for
-LTR
-and
-RTL
-but
-we
-move
-the
-private
-browsing
-indicator
-to
-the
-left
-in
-RTL
-.
-*
-/
 #
 main
 -
@@ -34218,35 +32563,6 @@ dir
 ltr
 )
 {
-/
-*
-Override
-display
-:
-none
-for
-.
-titlebar
--
-placeholder
-in
-fullscreen
-so
-we
-can
-have
-consistent
-position
-and
-padding
-for
-the
-private
-browsing
-indicator
-.
-*
-/
 display
 :
 -
@@ -34368,27 +32684,6 @@ lion
 theme
 )
 {
-/
-*
-There
-is
-no
-OS
-fullscreen
-button
-prior
-to
-Lion
-so
-the
-PB
-indicator
-can
-move
-closer
-.
-*
-/
 #
 main
 -
