Bug 969429 - DevTools Themes: in the light theme, the sidebar tab separators are too dark;r=pbrosset
UltraBlame original commit: ed39fdfb0fd0d447842c26885dfcfa974456c8d1

--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -8,7 +8,7 @@ filter
 substitution
 %
 define
-smallSeparator
+smallSeparatorDark
 linear
 -
 gradient
@@ -30,7 +30,29 @@ transparent
 )
 %
 define
-solidSeparator
+smallSeparatorLight
+linear
+-
+gradient
+(
+transparent
+15
+%
+#
+aaa
+15
+%
+#
+aaa
+85
+%
+transparent
+85
+%
+)
+%
+define
+solidSeparatorDark
 linear
 -
 gradient
@@ -39,6 +61,18 @@ gradient
 2d5b7d
 #
 2d5b7d
+)
+%
+define
+solidSeparatorLight
+linear
+-
+gradient
+(
+#
+aaa
+#
+aaa
 )
 .
 devtools
@@ -2612,19 +2646,6 @@ color
 :
 transparent
 ;
-background
--
-image
-:
-linear
--
-gradient
-(
-transparent
-transparent
-)
-smallSeparator
-;
 }
 .
 theme
@@ -2640,8 +2661,6 @@ tabs
 tabs
 >
 tab
-:
-hover
 {
 background
 -
@@ -2651,28 +2670,10 @@ linear
 -
 gradient
 (
-hsla
-(
-206
-37
-%
-4
-%
-.
-2
+transparent
+transparent
 )
-hsla
-(
-206
-37
-%
-4
-%
-.
-2
-)
-)
-smallSeparator
+smallSeparatorDark
 ;
 }
 .
@@ -2723,7 +2724,7 @@ hsla
 4
 )
 )
-smallSeparator
+smallSeparatorDark
 ;
 }
 .
@@ -2757,7 +2758,7 @@ gradient
 transparent
 transparent
 )
-solidSeparator
+solidSeparatorDark
 ;
 }
 .
@@ -2811,7 +2812,7 @@ hsla
 2
 )
 )
-solidSeparator
+solidSeparatorDark
 ;
 }
 .
@@ -2867,7 +2868,7 @@ hsla
 4
 )
 )
-solidSeparator
+solidSeparatorDark
 ;
 }
 .
@@ -2906,7 +2907,7 @@ gradient
 #
 1d4f73
 )
-solidSeparator
+solidSeparatorDark
 ;
 }
 .
@@ -2942,7 +2943,7 @@ gradient
 #
 274f64
 )
-solidSeparator
+solidSeparatorDark
 ;
 }
 .
@@ -2980,7 +2981,36 @@ gradient
 #
 1f3e4f
 )
-solidSeparator
+solidSeparatorDark
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
+>
+tab
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+transparent
+transparent
+)
+smallSeparatorLight
 ;
 }
 .
@@ -3013,7 +3043,7 @@ ddd
 #
 ddd
 )
-smallSeparator
+smallSeparatorLight
 ;
 }
 .
@@ -3048,7 +3078,7 @@ ddd
 #
 ddd
 )
-smallSeparator
+smallSeparatorLight
 ;
 }
 .
@@ -3082,7 +3112,7 @@ gradient
 transparent
 transparent
 )
-solidSeparator
+solidSeparatorLight
 ;
 }
 .
@@ -3120,7 +3150,7 @@ ddd
 #
 ddd
 )
-solidSeparator
+solidSeparatorLight
 ;
 }
 .
@@ -3180,7 +3210,7 @@ gradient
 #
 4c9ed9
 )
-solidSeparator
+solidSeparatorLight
 ;
 }
 #
