Bug 961780 - Use "b2g" package name instead of "browser". r=fabrice
UltraBlame original commit: 1f36e3d0f5a75321c6525d683671bbeb2f5c08d4

--- a/b2g/chrome/content/touchcontrols.css
+++ b/b2g/chrome/content/touchcontrols.css
@@ -178,7 +178,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
@@ -216,7 +216,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
@@ -247,7 +247,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
@@ -302,7 +302,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
@@ -333,7 +333,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
@@ -371,7 +371,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
@@ -592,7 +592,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
@@ -761,7 +761,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
@@ -797,7 +797,7 @@ chrome
 :
 /
 /
-browser
+b2g
 /
 content
 /
