--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -3051,6 +3051,60 @@ hsla
 ;
 }
 .
+theme
+-
+dark
+#
+requests
+-
+menu
+-
+footer
+{
+background
+:
+url
+(
+background
+-
+noise
+-
+toolbar
+.
+png
+)
+#
+343c45
+;
+}
+.
+theme
+-
+light
+#
+requests
+-
+menu
+-
+footer
+{
+background
+:
+url
+(
+background
+-
+noise
+-
+toolbar
+.
+png
+)
+#
+f0f1f2
+;
+}
+.
 requests
 -
 menu
