Bug 970814 - The network monitor's footer buttons (for sorting, clear, etc.) should use theme colors, r=rcampbell
UltraBlame original commit: e8e617ee59820aff3f64be7b98f36c39bb86a5b9

--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -3013,31 +3013,6 @@ width
 5em
 ;
 }
-#
-requests
--
-menu
--
-footer
-{
-border
--
-top
-:
-solid
-1px
-hsla
-(
-210
-5
-%
-5
-%
-.
-3
-)
-;
-}
 .
 theme
 -
@@ -3049,6 +3024,24 @@ menu
 -
 footer
 {
+border
+-
+top
+:
+1px
+solid
+table_itemDarkStartBorder
+;
+box
+-
+shadow
+:
+0
+1px
+0
+table_itemDarkEndBorder
+inset
+;
 background
 :
 url
@@ -3076,6 +3069,24 @@ menu
 -
 footer
 {
+border
+-
+top
+:
+1px
+solid
+table_itemLightStartBorder
+;
+box
+-
+shadow
+:
+0
+1px
+0
+table_itemLightEndBorder
+inset
+;
 background
 :
 url
@@ -3257,7 +3268,7 @@ start
 :
 1px
 solid
-table_itemDarkStartBorder
+table_itemDarkEndBorder
 ;
 box
 -
@@ -3267,7 +3278,7 @@ shadow
 1px
 0
 0
-table_itemDarkEndBorder
+table_itemDarkStartBorder
 ;
 }
 .
@@ -3320,7 +3331,7 @@ start
 :
 1px
 solid
-table_itemLightStartBorder
+table_itemLightEndBorder
 ;
 box
 -
@@ -3330,7 +3341,7 @@ shadow
 1px
 0
 0
-table_itemLightEndBorder
+table_itemLightStartBorder
 ;
 }
 .
@@ -3382,10 +3393,14 @@ rgba
 0
 0
 .
-20
+10
 )
 ;
 }
+.
+theme
+-
+dark
 .
 requests
 -
@@ -3400,18 +3415,56 @@ hover
 active
 {
 background
+-
+color
 :
 rgba
 (
-0
-0
-0
+29
+79
+115
 0
 .
-35
+4
 )
 ;
 }
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+footer
+-
+button
+:
+hover
+:
+active
+{
+background
+-
+color
+:
+rgba
+(
+76
+158
+217
+0
+.
+4
+)
+;
+}
+.
+theme
+-
+dark
 .
 requests
 -
@@ -3436,66 +3489,66 @@ color
 :
 rgba
 (
-0
-0
-0
-0
-.
-25
+29
+79
+115
+1
 )
 ;
-background
--
-image
+color
 :
-radial
--
-gradient
+rgba
 (
-farthest
--
-side
-at
-center
-top
-hsla
-(
-200
-100
-%
-70
-%
-.
-7
-)
-hsla
-(
-200
-100
-%
-70
-%
-0
-.
-3
-)
+245
+247
+250
+1
 )
 ;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+footer
+-
+button
+:
+not
+(
+:
+active
+)
+[
+checked
+]
+{
 background
 -
-size
+color
 :
-100
-%
-1px
+rgba
+(
+76
+158
+217
+1
+)
 ;
-background
--
-repeat
+color
 :
-no
--
-repeat
+rgba
+(
+245
+247
+250
+1
+)
 ;
 }
 .
