Bug 967836 - [Australis] Increase titlebar margin when using an lw-theme on OS X with tabs in titlebar disabled. r=mconley
UltraBlame original commit: 333e64e85ffbc18d05676302361b429e9fdf76ab

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -31629,6 +31629,33 @@ bottom
 main
 -
 window
+:
+not
+(
+[
+tabsintitlebar
+]
+)
+:
+-
+moz
+-
+lwtheme
+>
+#
+titlebar
+{
+margin
+-
+bottom
+:
+5px
+;
+}
+#
+main
+-
+window
 [
 tabsintitlebar
 ]
