Bug 964104 - fix icons moving when pressing down on Australis for Linux, r=jaws
UltraBlame original commit: b563dbb8da42b3a6f6d6c3a6efaaad017ba8b19c

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -1,64 +1,6 @@
 %
 if
 0
-/
-*
-This
-Source
-Code
-Form
-is
-subject
-to
-the
-terms
-of
-the
-Mozilla
-Public
-*
-License
-v
-.
-2
-.
-0
-.
-If
-a
-copy
-of
-the
-MPL
-was
-not
-distributed
-with
-this
-*
-file
-You
-can
-obtain
-one
-at
-http
-:
-/
-/
-mozilla
-.
-org
-/
-MPL
-/
-2
-.
-0
-/
-.
-*
-/
 %
 endif
 import
@@ -185,13 +127,6 @@ orient
 :
 vertical
 ;
-/
-*
-for
-flex
-hack
-*
-/
 }
 #
 main
@@ -207,18 +142,6 @@ flex
 :
 1
 ;
-/
-*
-make
-menu
-items
-expand
-to
-fill
-toolbar
-height
-*
-/
 }
 #
 navigator
@@ -276,14 +199,6 @@ group
 :
 101
 ;
-/
-*
-tabs
-toolbar
-is
-100
-*
-/
 height
 :
 1px
@@ -430,16 +345,6 @@ top
 -
 1px
 ;
-/
-*
-Move
-up
-1px
-into
-the
-TabsToolbar
-*
-/
 padding
 -
 top
@@ -452,19 +357,6 @@ bottom
 :
 2px
 ;
-/
-*
-Position
-the
-toolbar
-above
-the
-bottom
-of
-background
-tabs
-*
-/
 position
 :
 relative
@@ -520,14 +412,6 @@ browser
 -
 bottombox
 {
-/
-*
-opaque
-for
-layers
-optimization
-*
-/
 background
 -
 color
@@ -583,12 +467,6 @@ opacity
 85
 ;
 }
-/
-*
-Places
-toolbar
-*
-/
 toolbarbutton
 .
 bookmark
@@ -722,18 +600,6 @@ height
 16px
 ;
 }
-/
-*
-Force
-the
-display
-of
-the
-label
-for
-bookmarks
-*
-/
 .
 bookmark
 -
@@ -796,14 +662,6 @@ display
 none
 ;
 }
-/
-*
-Dropmarker
-for
-folder
-bookmarks
-*
-/
 .
 bookmark
 -
@@ -937,23 +795,6 @@ png
 important
 ;
 }
-/
-*
--
--
--
--
--
-BOOKMARK
-STAR
-ANIMATION
--
--
--
--
--
-*
-/
 keyframes
 animation
 -
@@ -1423,12 +1264,6 @@ ease
 out
 ;
 }
-/
-*
-Bookmark
-menus
-*
-/
 menu
 .
 bookmark
@@ -1507,15 +1342,6 @@ start
 0px
 ;
 }
-/
-*
-Bookmark
-drag
-and
-drop
-styles
-*
-/
 .
 bookmark
 -
@@ -1543,15 +1369,6 @@ HighlightText
 important
 ;
 }
-/
-*
-rules
-for
-menupopup
-drop
-indicators
-*
-/
 .
 menupopup
 -
@@ -1565,21 +1382,6 @@ position
 :
 relative
 ;
-/
-*
-these
-two
-margins
-must
-together
-compensate
-the
-indicator
-'
-s
-height
-*
-/
 margin
 -
 top
@@ -1631,12 +1433,6 @@ color
 Highlight
 ;
 }
-/
-*
-Bookmarks
-toolbar
-*
-/
 #
 PlacesToolbarDropIndicator
 {
@@ -1664,12 +1460,6 @@ png
 )
 ;
 }
-/
-*
-Bookmark
-items
-*
-/
 .
 bookmark
 -
@@ -2140,17 +1930,6 @@ opacity
 7
 ;
 }
-/
-*
-Stock
-icons
-for
-the
-menu
-bar
-items
-*
-/
 menuitem
 :
 not
@@ -4394,13 +4173,6 @@ png
 )
 ;
 }
-/
-*
-Primary
-toolbar
-buttons
-*
-/
 :
 -
 moz
@@ -4449,6 +4221,57 @@ moz
 appearance
 :
 none
+;
+}
+:
+-
+moz
+-
+any
+(
+#
+TabsToolbar
+#
+nav
+-
+bar
+)
+.
+toolbarbutton
+-
+1
+[
+open
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+any
+(
+#
+TabsToolbar
+#
+nav
+-
+bar
+)
+.
+toolbarbutton
+-
+1
+:
+hover
+:
+active
+{
+padding
+:
+3px
 ;
 }
 :
@@ -4658,15 +4481,6 @@ padding
 7px
 ;
 }
-/
-*
-Help
-SDK
-icons
-fit
-:
-*
-/
 toolbarbutton
 [
 sdk
@@ -4735,35 +4549,6 @@ toolbarbutton
 -
 icon
 {
-/
-*
-XXXgijs
-box
-models
-strike
-again
-:
-this
-is
-16px
-+
-2
-*
-7px
-padding
-+
-2
-*
-1px
-border
-(
-from
-the
-rules
-above
-)
-*
-/
 width
 :
 32px
@@ -5646,13 +5431,6 @@ scaleX
 )
 ;
 }
-/
-*
-tabview
-menu
-item
-*
-/
 #
 menu_tabview
 {
@@ -6294,13 +6072,6 @@ disabled
 )
 ;
 }
-/
-*
-Menu
-panel
-buttons
-*
-/
 %
 include
 .
@@ -6474,13 +6245,6 @@ opacity
 4
 ;
 }
-/
-*
-Fullscreen
-window
-controls
-*
-/
 #
 window
 -
@@ -6598,12 +6362,6 @@ gif
 )
 ;
 }
-/
-*
-Location
-bar
-*
-/
 #
 urlbar
 {
@@ -7187,12 +6945,6 @@ rect
 )
 ;
 }
-/
-*
-Identity
-indicator
-*
-/
 #
 identity
 -
@@ -7405,13 +7157,6 @@ end
 4px
 ;
 }
-/
-*
-Identity
-popup
-icons
-*
-/
 #
 identity
 -
@@ -7544,14 +7289,6 @@ rect
 )
 ;
 }
-/
-*
-Identity
-popup
-body
-text
-*
-/
 .
 identity
 -
@@ -8071,12 +7808,6 @@ top
 5px
 ;
 }
-/
-*
-Notification
-popup
-*
-/
 #
 notification
 -
@@ -8893,13 +8624,6 @@ png
 )
 ;
 }
-/
-*
-Notification
-icon
-box
-*
-/
 #
 notification
 -
@@ -9601,26 +9325,6 @@ box
 hidden
 ]
 {
-/
-*
-Override
-display
-:
-none
-to
-make
-the
-pluginBlockedNotification
-animation
-work
-when
-showing
-the
-notification
-repeatedly
-.
-*
-/
 display
 :
 -
@@ -10360,20 +10064,6 @@ solid
 GrayText
 ;
 }
-/
-*
-Combined
-go
-/
-reload
-/
-stop
-button
-in
-location
-bar
-*
-/
 #
 urlbar
 >
@@ -10929,13 +10619,6 @@ rect
 )
 ;
 }
-/
-*
-Popup
-blocker
-button
-*
-/
 #
 page
 -
@@ -10967,13 +10650,6 @@ png
 )
 ;
 }
-/
-*
-social
-share
-panel
-*
-/
 .
 social
 -
@@ -11024,19 +10700,6 @@ height
 :
 150px
 ;
-/
-*
-we
-resize
-our
-panels
-dynamically
-make
-it
-look
-nice
-*
-/
 transition
 :
 height
@@ -11316,13 +10979,6 @@ height
 16px
 ;
 }
-/
-*
-social
-recommending
-panel
-*
-/
 #
 social
 -
@@ -11346,14 +11002,6 @@ rect
 )
 ;
 }
-/
-*
-bookmarks
-menu
--
-button
-*
-/
 #
 bookmarks
 -
@@ -11809,12 +11457,6 @@ bottom
 16px
 ;
 }
-/
-*
-Bookmarking
-panel
-*
-/
 #
 editBookmarkPanelStarIcon
 {
@@ -11908,19 +11550,6 @@ bottom
 5em
 ;
 }
-/
-*
-Implements
-editBookmarkPanel
-resizing
-on
-folderTree
-un
--
-collapse
-.
-*
-/
 #
 editBMPanel_folderTree
 {
@@ -12111,12 +11740,6 @@ margin
 0
 ;
 }
-/
-*
-Content
-area
-*
-/
 #
 sidebar
 {
@@ -12155,11 +11778,6 @@ shadow
 none
 ;
 }
-/
-*
-Tabstrip
-*
-/
 %
 include
 .
@@ -12177,26 +11795,6 @@ tabbrowser
 -
 tabs
 {
-/
-*
-override
-the
-global
-style
-to
-allow
-the
-selected
-tab
-to
-be
-above
-the
-nav
--
-bar
-*
-/
 z
 -
 index
@@ -12222,19 +11820,6 @@ position
 relative
 ;
 }
-/
-*
-*
-Draw
-the
-bottom
-border
-of
-the
-tabstrip
-:
-*
-/
 #
 TabsToolbar
 :
@@ -12592,14 +12177,6 @@ menu
 )
 ;
 }
-/
-*
-Tab
-drag
-and
-drop
-*
-/
 .
 tab
 -
@@ -12644,15 +12221,6 @@ index
 3
 ;
 }
-/
-*
-In
--
-tab
-close
-button
-*
-/
 .
 tab
 -
@@ -12665,45 +12233,6 @@ toolbarbutton
 -
 icon
 {
-/
-*
-XXX
-Buttons
-have
-padding
-in
-widget
-/
-that
-we
-don
-'
-t
-want
-here
-but
-can
-'
-t
-override
-with
-good
-CSS
-so
-we
-must
-use
-evil
-CSS
-to
-give
-the
-impression
-of
-smaller
-content
-*
-/
 margin
 :
 -
@@ -12768,14 +12297,6 @@ end
 4px
 ;
 }
-/
-*
-Tabstrip
-new
-tab
-button
-*
-/
 .
 tabs
 -
@@ -12847,13 +12368,6 @@ region
 auto
 ;
 }
-/
-*
-Tabstrip
-close
-button
-*
-/
 .
 tabs
 -
@@ -12897,58 +12411,12 @@ toolbarbutton
 -
 icon
 {
-/
-*
-XXX
-Buttons
-have
-padding
-in
-widget
-/
-that
-we
-don
-'
-t
-want
-here
-but
-can
-'
-t
-override
-with
-good
-CSS
-so
-we
-must
-use
-evil
-CSS
-to
-give
-the
-impression
-of
-smaller
-content
-*
-/
 margin
 :
 -
 2px
 ;
 }
-/
-*
-Tabbrowser
-arrowscrollbox
-arrows
-*
-/
 .
 tabbrowser
 -
@@ -13382,13 +12850,6 @@ display
 none
 ;
 }
-/
-*
-All
-tabs
-menupopup
-*
-/
 .
 alltabs
 -
@@ -13509,23 +12970,6 @@ item
 tabIsVisible
 ]
 {
-/
-*
-box
--
-shadow
-instead
-of
-background
--
-color
-to
-work
-around
-native
-styling
-*
-/
 box
 -
 shadow
@@ -13537,11 +12981,6 @@ inset
 ThreeDShadow
 ;
 }
-/
-*
-Sidebar
-*
-/
 #
 sidebar
 -
@@ -13715,13 +13154,6 @@ margin
 0
 ;
 }
-/
-*
-Ctrl
--
-Tab
-*
-/
 .
 ctrlTab
 -
@@ -13867,12 +13299,6 @@ top
 10px
 ;
 }
-/
-*
-Sync
-Panel
-*
-/
 .
 sync
 -
@@ -13991,12 +13417,6 @@ margin
 0
 ;
 }
-/
-*
-Status
-panel
-*
-/
 .
 statuspanel
 -
@@ -14442,12 +13862,6 @@ hsl
 )
 ;
 }
-/
-*
-Error
-counter
-*
-/
 #
 developer
 -
@@ -14511,13 +13925,6 @@ end
 2px
 ;
 }
-/
-*
-Social
-toolbar
-item
-*
-/
 #
 social
 -
@@ -14643,22 +14050,6 @@ badge
 :
 after
 {
-/
-*
-The
-|
-content
-|
-property
-is
-set
-in
-the
-content
-stylesheet
-.
-*
-/
 font
 -
 size
@@ -14874,18 +14265,6 @@ start
 :
 0
 ;
-/
-*
-override
-default
-label
-margin
-to
-match
-description
-margin
-*
-/
 }
 .
 social
@@ -14943,14 +14322,6 @@ margin
 0
 ;
 }
-/
-*
-social
-toolbar
-provider
-menu
-*
-/
 #
 social
 -
@@ -15297,12 +14668,6 @@ radius
 5px
 ;
 }
-/
-*
-Customization
-mode
-*
-/
 %
 include
 .
@@ -15712,13 +15077,6 @@ right
 2em
 ;
 }
-/
-*
-End
-customization
-mode
-*
-/
 #
 main
 -
