--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -4554,6 +4554,36 @@ width
 32px
 ;
 }
+#
+nav
+-
+bar
+#
+PanelUI
+-
+menu
+-
+button
+{
+-
+moz
+-
+padding
+-
+start
+:
+7px
+;
+-
+moz
+-
+padding
+-
+end
+:
+5px
+;
+}
 :
 -
 moz
