--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -3747,6 +3747,36 @@ center
 nav
 -
 bar
+#
+PanelUI
+-
+menu
+-
+button
+{
+-
+moz
+-
+padding
+-
+start
+:
+7px
+;
+-
+moz
+-
+padding
+-
+end
+:
+5px
+;
+}
+#
+nav
+-
+bar
 .
 toolbarbutton
 -
