Bug 964263 - Get rid of unused blankspace in css computed-view when resizing the sidebar r=pbrosset
UltraBlame original commit: 445dca4f26f044063a48b3d0ad8b5518786091a4

--- a/browser/themes/linux/devtools/computedview.css
+++ b/browser/themes/linux/devtools/computedview.css
@@ -129,8 +129,13 @@ name
 {
 width
 :
-50
+calc
+(
+100
 %
+-
+12px
+)
 ;
 overflow
 -
@@ -160,13 +165,6 @@ property
 -
 value
 {
-width
-:
-50
-%
-;
-max
--
 width
 :
 100
@@ -311,7 +309,13 @@ value
 {
 width
 :
-auto
+calc
+(
+100
+%
+-
+212px
+)
 ;
 }
 }
