--- a/browser/themes/windows/devtools/computedview.css
+++ b/browser/themes/windows/devtools/computedview.css
@@ -174,8 +174,13 @@ name
 {
 width
 :
-50
+calc
+(
+100
 %
+-
+12px
+)
 ;
 overflow
 -
@@ -205,13 +210,6 @@ property
 -
 value
 {
-width
-:
-50
-%
-;
-max
--
 width
 :
 100
@@ -356,7 +354,13 @@ value
 {
 width
 :
-auto
+calc
+(
+100
+%
+-
+212px
+)
 ;
 }
 }
