--- a/browser/themes/osx/devtools/ruleview.css
+++ b/browser/themes/osx/devtools/ruleview.css
@@ -464,6 +464,28 @@ through
 ;
 }
 .
+theme
+-
+light
+.
+ruleview
+-
+overridden
+{
+-
+moz
+-
+text
+-
+decoration
+-
+color
+:
+#
+667380
+;
+}
+.
 styleinspector
 -
 propertyeditor
