Bug 940844 - Australis: sync busy icon (sync pending) in menu is missing on Linux. r=Gijs
UltraBlame original commit: f8b656efb478868e4c889c42540b77eb93ce91c5

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -5700,6 +5700,15 @@ sync
 -
 button
 [
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+[
 status
 =
 "
@@ -5724,11 +5733,9 @@ browser
 /
 skin
 /
-sync
+syncProgress
 -
-24
--
-throbber
+toolbar
 .
 png
 "
@@ -5744,8 +5751,72 @@ region
 rect
 (
 0px
-24px
-24px
+18px
+18px
+0px
+)
+;
+}
+#
+sync
+-
+button
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+[
+status
+=
+"
+active
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+syncProgress
+-
+menuPanel
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+32px
+32px
 0px
 )
 ;
