--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -5700,15 +5700,6 @@ sync
 -
 button
 [
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-[
 status
 =
 "
@@ -5733,73 +5724,11 @@ browser
 /
 skin
 /
-syncProgress
--
-toolbar
-.
-png
-"
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-18px
-18px
-0px
-)
-;
-}
-#
 sync
 -
-button
-[
-cui
+24
 -
-areatype
-=
-"
-menu
--
-panel
-"
-]
-[
-status
-=
-"
-active
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-syncProgress
--
-menuPanel
+throbber
 .
 png
 "
@@ -5815,8 +5744,8 @@ region
 rect
 (
 0px
-32px
-32px
+24px
+24px
 0px
 )
 ;
