Bug 969356 - Backed out because this change hides the scrollbar and clips bottom tiles in portrait/snapped.
UltraBlame original commit: 733bb9bfcc1463f0111a1992fe48bc06f8908a34

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -1652,6 +1652,27 @@ newtab_button_width
 ;
 }
 #
+content
+-
+viewport
+[
+startpage
+]
+.
+active
+-
+tab
+-
+notificationbox
+{
+padding
+-
+bottom
+:
+toolbar_height
+;
+}
+#
 urlbar
 -
 autocomplete
