[Australis] Bug 938578: update separator styling in subviews and align related items accordingly. r=Gijs
UltraBlame original commit: 6879e47ff29b1017277414c41725238bddfea864

--- a/browser/themes/osx/customizableui/panelUIOverlay.css
+++ b/browser/themes/osx/customizableui/panelUIOverlay.css
@@ -462,3 +462,23 @@ start
 4px
 ;
 }
+.
+PanelUI
+-
+subView
+menuseparator
+.
+cui
+-
+widget
+-
+panelview
+menuseparator
+{
+padding
+:
+0
+!
+important
+;
+}
