--- a/browser/themes/linux/customizableui/panelUIOverlay.css
+++ b/browser/themes/linux/customizableui/panelUIOverlay.css
@@ -95,3 +95,39 @@ start
 0
 ;
 }
+.
+PanelUI
+-
+subView
+toolbarseparator
+.
+PanelUI
+-
+subView
+menuseparator
+.
+cui
+-
+widget
+-
+panelview
+menuseparator
+#
+PanelUI
+-
+footer
+-
+inner
+>
+toolbarseparator
+{
+-
+moz
+-
+appearance
+:
+none
+!
+important
+;
+}
