--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -658,6 +658,45 @@ flex
 ;
 }
 .
+subviewbutton
+:
+not
+(
+:
+-
+moz
+-
+any
+(
+[
+image
+]
+[
+targetURI
+]
+.
+cui
+-
+withicon
+)
+)
+>
+.
+toolbarbutton
+-
+text
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+}
+.
 panel
 -
 subview
@@ -700,6 +739,11 @@ body
 margin
 :
 -
+4px
+;
+padding
+:
+2px
 4px
 ;
 }
@@ -1350,15 +1394,6 @@ text
 align
 :
 start
-;
--
-moz
--
-padding
--
-start
-:
-8px
 ;
 display
 :
@@ -2567,6 +2602,13 @@ margin
 7px
 0
 7px
+;
+-
+moz
+-
+appearance
+:
+none
 ;
 }
 #
@@ -3791,38 +3833,6 @@ right
 4px
 ;
 }
-.
-PanelUI
--
-subView
-menuseparator
-.
-PanelUI
--
-subView
-toolbarseparator
-{
--
-moz
--
-margin
--
-start
-:
--
-5px
-;
--
-moz
--
-margin
--
-end
-:
--
-4px
-;
-}
 panelview
 .
 toolbarbutton
@@ -4139,11 +4149,22 @@ bottom
 0
 ;
 }
-panelview
+.
+PanelUI
+-
+subView
+menuseparator
+.
+PanelUI
+-
+subView
 toolbarseparator
-#
-BMB_bookmarksPopup
->
+.
+cui
+-
+widget
+-
+panelview
 menuseparator
 {
 -
@@ -4165,12 +4186,114 @@ top
 :
 1px
 solid
-ThreeDShadow
+hsla
+(
+210
+4
+%
+10
+%
+.
+15
+)
 ;
 margin
 :
-5px
+2px
 0
+;
+padding
+:
+0
+;
+}
+.
+PanelUI
+-
+subView
+menuseparator
+.
+PanelUI
+-
+subView
+toolbarseparator
+{
+-
+moz
+-
+margin
+-
+start
+:
+-
+5px
+;
+-
+moz
+-
+margin
+-
+end
+:
+-
+4px
+;
+}
+.
+PanelUI
+-
+subView
+menuseparator
+.
+small
+-
+separator
+.
+PanelUI
+-
+subView
+toolbarseparator
+.
+small
+-
+separator
+{
+margin
+-
+left
+:
+5px
+;
+margin
+-
+right
+:
+5px
+;
+}
+.
+cui
+-
+widget
+-
+panelview
+menuseparator
+.
+small
+-
+separator
+{
+margin
+-
+left
+:
+10px
+;
+margin
+-
+right
+:
+10px
 ;
 }
 .
@@ -5706,55 +5829,17 @@ hsla
 )
 ;
 }
-#
-PanelUI
--
-developerItems
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
-#
-PanelUI
--
-bookmarks
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
-#
-PanelUI
--
-history
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
 .
 PanelUI
 -
-characterEncodingView
--
-list
->
+subView
 toolbarbutton
 [
-current
+checked
+=
+"
+true
+"
 ]
 {
 -
@@ -5767,11 +5852,10 @@ start
 4px
 ;
 }
-#
+.
 PanelUI
 -
-developerItems
->
+subView
 toolbarbutton
 [
 checked
@@ -5779,80 +5863,6 @@ checked
 "
 true
 "
-]
->
-.
-toolbarbutton
--
-text
-#
-PanelUI
--
-bookmarks
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
->
-.
-toolbarbutton
--
-text
-#
-PanelUI
--
-history
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
->
-.
-toolbarbutton
--
-text
-.
-PanelUI
--
-characterEncodingView
--
-list
->
-toolbarbutton
-[
-current
-]
->
-.
-toolbarbutton
--
-text
-.
-cui
--
-widget
--
-panel
-.
-PanelUI
--
-characterEncodingView
--
-list
->
-toolbarbutton
-[
-current
 ]
 >
 .
@@ -5870,58 +5880,11 @@ start
 0px
 ;
 }
-#
-BMB_bookmarksPopup
->
+.
+PanelUI
+-
+subView
 menuitem
-[
-checked
-=
-"
-true
-"
-]
-:
-:
-before
-#
-PanelUI
--
-bookmarks
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
-:
-:
-before
-#
-PanelUI
--
-history
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
-:
-:
-before
-#
-PanelUI
--
-developerItems
->
-toolbarbutton
 [
 checked
 =
@@ -5935,13 +5898,14 @@ before
 .
 PanelUI
 -
-characterEncodingView
--
-list
->
+subView
 toolbarbutton
 [
-current
+checked
+=
+"
+true
+"
 ]
 :
 :
@@ -5963,78 +5927,9 @@ width
 :
 12px
 ;
-}
-#
-PanelUI
--
-bookmarks
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
-:
-:
-before
-#
-PanelUI
--
-history
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
-:
-:
-before
-#
-PanelUI
--
-developerItems
->
-toolbarbutton
-[
-checked
-=
-"
-true
-"
-]
-:
-:
-before
-.
-PanelUI
--
-characterEncodingView
--
-list
->
-toolbarbutton
-[
-current
-]
-:
-:
-before
-{
--
-moz
--
 margin
--
-end
 :
--
+0
 2px
 ;
 }
