Bug 956357 - "Preview Response" tab for HTML in the Network Monitor, r=rcampbell
UltraBlame original commit: 8c16947178aea8d05516f841bc7871254aad31f1

--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -2883,6 +2883,39 @@ bottom
 ;
 }
 #
+preview
+-
+tabpanel
+{
+background
+:
+#
+fff
+;
+}
+#
+response
+-
+preview
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+}
+#
 timings
 -
 tabpanel
