Bug 940379 - [Australis] Bookmarks panel isn't aligned with other panels. r=Gijs
UltraBlame original commit: 4d5b1351ce2d1d63c5f38b756f965ca0281410e1

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -11529,6 +11529,61 @@ bottom
 ;
 }
 #
+nav
+-
+bar
+.
+toolbarbutton
+-
+1
+>
+menupopup
+[
+side
+=
+"
+top
+"
+]
+.
+cui
+-
+widget
+-
+panel
+#
+nav
+-
+bar
+.
+toolbarbutton
+-
+1
+>
+menupopup
+[
+side
+=
+"
+bottom
+"
+]
+.
+cui
+-
+widget
+-
+panel
+{
+margin
+-
+top
+:
+-
+4px
+;
+}
+#
 editBookmarkPanelStarIcon
 {
 list
