--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -10747,6 +10747,27 @@ top
 1px
 ;
 }
+.
+toolbarbutton
+-
+1
+>
+menupopup
+.
+cui
+-
+widget
+-
+panel
+{
+margin
+-
+top
+:
+-
+5px
+;
+}
 #
 back
 -
