--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -3842,6 +3842,31 @@ toolbarbutton
 -
 1
 >
+menupopup
+.
+cui
+-
+widget
+-
+panel
+{
+margin
+-
+top
+:
+-
+8px
+;
+}
+#
+nav
+-
+bar
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
