[Australis] Bug 968595 - Change arrow panel arrow size and arrow panel styling. r=dao
UltraBlame original commit: a040e19c30c1525051863de0f54dffe0e86e4d6d

--- a/toolkit/themes/osx/global/popup.css
+++ b/toolkit/themes/osx/global/popup.css
@@ -305,14 +305,14 @@ margin
 left
 :
 -
-26px
+25px
 ;
 margin
 -
 right
 :
 -
-26px
+25px
 ;
 }
 panel
@@ -351,14 +351,14 @@ margin
 top
 :
 -
-26px
+25px
 ;
 margin
 -
 bottom
 :
 -
-26px
+25px
 ;
 }
 .
@@ -374,14 +374,52 @@ appearance
 none
 ;
 background
+-
+image
 :
-#
-f5f5f5
+linear
+-
+gradient
+(
+hsla
+(
+0
+0
+%
+99
+%
+1
+)
+hsla
+(
+0
+0
+%
+99
+%
+.
+975
+)
+10
+%
+hsla
+(
+0
+0
+%
+98
+%
+.
+975
+)
+)
 ;
 border
 -
 radius
 :
+3
+.
 5px
 ;
 box
@@ -392,44 +430,27 @@ shadow
 0
 0
 1px
-rgba
+hsla
 (
-255
-255
-255
-.
-5
-)
-inset
-0
-1px
-0
-rgba
-(
-255
-255
-255
+210
+4
+%
+10
+%
 .
 05
-)
-inset
-0
-0
-0
-1px
-rgba
-(
-0
-0
-0
-.
-25
 )
 ;
 color
 :
-#
-333
+hsl
+(
+0
+0
+%
+10
+%
+)
 ;
 padding
 :
@@ -483,20 +504,20 @@ margin
 -
 left
 :
-6px
+16px
 ;
 margin
 -
 right
 :
-6px
+16px
 ;
 margin
 -
 bottom
 :
 -
-2px
+1px
 ;
 }
 .
@@ -553,20 +574,20 @@ margin
 -
 left
 :
-6px
+16px
 ;
 margin
 -
 right
 :
-6px
+16px
 ;
 margin
 -
 top
 :
 -
-2px
+1px
 ;
 }
 .
@@ -612,20 +633,20 @@ margin
 -
 top
 :
-6px
+16px
 ;
 margin
 -
 bottom
 :
-6px
+16px
 ;
 margin
 -
 right
 :
 -
-2px
+1px
 ;
 }
 .
@@ -679,20 +700,20 @@ margin
 -
 top
 :
-6px
+16px
 ;
 margin
 -
 bottom
 :
-6px
+16px
 ;
 margin
 -
 left
 :
 -
-2px
+1px
 ;
 }
 media
@@ -757,11 +778,11 @@ png
 ;
 width
 :
-39px
+18px
 ;
 height
 :
-16px
+10px
 ;
 }
 .
@@ -817,11 +838,11 @@ png
 ;
 width
 :
-16px
+10px
 ;
 height
 :
-39px
+18px
 ;
 }
 }
